:sparkles: 代码优化，升级到高版本 jdk 语法