@@ -33,7 +33,7 @@ public class RateLimiterException extends RuntimeException {
 	private final TimeUnit timeUnit;
 
 	public RateLimiterException(String key, long max, long ttl, TimeUnit timeUnit) {
-		super(String.format("您的访问次数已超限：%s，速率：%d/%ds", key, max, timeUnit.toSeconds(ttl)));
+		super("您的访问次数已超限：%s，速率：%d/%ds".formatted(key, max, timeUnit.toSeconds(ttl)));
 		this.key = key;
 		this.max = max;
 		this.ttl = ttl;
